docs/0.7/_sources/api/gammapy.maps.HpxMap.rst.txt
HpxMap
======

.. currentmodule:: gammapy.maps

.. autoclass:: HpxMap
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~HpxMap.data
      ~HpxMap.geom

   .. rubric:: Methods Summary

   .. autosummary::

      ~HpxMap.coadd
      ~HpxMap.create
      ~HpxMap.crop
      ~HpxMap.downsample
      ~HpxMap.fill_by_coord
      ~HpxMap.fill_by_idx
      ~HpxMap.fill_by_pix
      ~HpxMap.from_geom
      ~HpxMap.from_hdu_list
      ~HpxMap.from_hdulist
      ~HpxMap.get_by_coord
      ~HpxMap.get_by_idx
      ~HpxMap.get_by_pix
      ~HpxMap.interp_by_coord
      ~HpxMap.interp_by_pix
      ~HpxMap.iter_by_coord
      ~HpxMap.iter_by_image
      ~HpxMap.iter_by_pix
      ~HpxMap.make_hdu
      ~HpxMap.pad
      ~HpxMap.read
      ~HpxMap.reproject
      ~HpxMap.set_by_coord
      ~HpxMap.set_by_idx
      ~HpxMap.set_by_pix
      ~HpxMap.sum_over_axes
      ~HpxMap.to_hdulist
      ~HpxMap.to_swapped
      ~HpxMap.to_ud_graded
      ~HpxMap.to_wcs
      ~HpxMap.upsample
      ~HpxMap.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: data
   .. autoattribute:: geom

   .. rubric:: Methods Documentation

   .. automethod:: coadd
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: downsample
   .. automethod:: fill_by_coord
   .. automethod:: fill_by_idx
   .. automethod:: fill_by_pix
   .. automethod:: from_geom
   .. automethod:: from_hdu_list
   .. automethod:: from_hdulist
   .. automethod:: get_by_coord
   .. automethod:: get_by_idx
   .. automethod:: get_by_pix
   .. automethod:: interp_by_coord
   .. automethod:: interp_by_pix
   .. automethod:: iter_by_coord
   .. automethod:: iter_by_image
   .. automethod:: iter_by_pix
   .. automethod:: make_hdu
   .. automethod:: pad
   .. automethod:: read
   .. automethod:: reproject
   .. automethod:: set_by_coord
   .. automethod:: set_by_idx
   .. automethod:: set_by_pix
   .. automethod:: sum_over_axes
   .. automethod:: to_hdulist
   .. automethod:: to_swapped
   .. automethod:: to_ud_graded
   .. automethod:: to_wcs
   .. automethod:: upsample
   .. automethod:: write
